<resources>
    <string name="app_name">Green Pilot</string>
    <string name="plant_add_button">Ajouter</string>
    <string name="plant_name">Adresse Mac</string>
    <string name="plant_species">Espèce</string>
    <string name="plant_date">Date plantation</string>
    <string name="plant_description">Notes</string>
    <string name="plant_edit_button">Modifier</string>
    <string name="irriguer">Irriguer</string>
    <string-array name="species">
        <item>Tomate</item>
        <item>Fraise</item>
        <item>Menthe</item>
        <item>Basilic</item>
        <item>Courgette</item>
        <item>Persil</item>
    </string-array>
    <string-array name="levels">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>