<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPlantActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plant_name"
        />
    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        ></EditText>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plant_species"></TextView>

    <Spinner
        android:id="@+id/species_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/species">

    </Spinner>

    <EditText
        android:id="@+id/species_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        ></EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plant_date"></TextView>

    <EditText
        android:id="@+id/date_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        ></EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plant_description"></TextView>

    <EditText
        android:id="@+id/description_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        ></EditText>


    <Button
        android:id="@+id/add_plant_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plant_add_button"></Button>



</LinearLayout>