<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".DetailsPlanteActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="top">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plant_name"
        android:textSize="25dp"
        />
    <TextView
        android:id="@+id/name_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        ></TextView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plant_species"
        android:textSize="25dp"></TextView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/species_textView"
        android:textSize="22dp"></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plant_date"
        android:textSize="25dp"></TextView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/date_textView"
        android:textSize="22dp"></TextView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plant_description"
        android:textSize="25dp"
        ></TextView>

    <TextView
        android:id="@+id/description_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        ></TextView>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity = "top">
    <ImageView
        android:id="@+id/adapter_plante_imageview"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginRight="10dp"
    ></ImageView>





    </LinearLayout>
</LinearLayout>